Closed
Bug 588568
Opened 15 years ago
Closed 15 years ago
Reported crash in about:memory on XP [@ D2DVRAMReporter::GetMemoryUsed(__int64*) ]
Categories
(Core :: Graphics, defect)
Tracking
()
VERIFIED
FIXED
Tracking | Status | |
---|---|---|
blocking2.0 | --- | beta5+ |
People
(Reporter: bas.schouten, Assigned: bas.schouten)
Details
Attachments
(1 file, 2 obsolete files)
947 bytes,
patch
|
joe
:
review+
|
Details | Diff | Splinter Review |
We have a report of about:memory crashing on XP.
crash-report : bp-1703b36b-898a-4c8f-abcc-493252100818
Updated•15 years ago
|
Summary: Reported crash in about:memory on XP → Reported crash in about:memory on XP [@ D2DVRAMReporter::GetMemoryUsed(__int64*) ]
Comment 1•15 years ago
|
||
that's on hardware that isn't Direct2D capable if that helps
Assignee | ||
Comment 2•15 years ago
|
||
Attachment #467180 -
Flags: review?(joe)
Assignee | ||
Comment 3•15 years ago
|
||
Updated to make sure 0 is returned otherwise.
Attachment #467180 -
Attachment is obsolete: true
Attachment #467182 -
Flags: review?(joe)
Attachment #467180 -
Flags: review?(joe)
Updated•15 years ago
|
Attachment #467182 -
Flags: review?(joe) → review+
Assignee | ||
Comment 4•15 years ago
|
||
(In reply to comment #1)
> that's on hardware that isn't Direct2D capable if that helps
Windows XP doesn't support Direct2D at all :-) Regardless of the hardware. It has no DirectX 10 support.
Assignee | ||
Updated•15 years ago
|
blocking2.0: --- → ?
Updated•15 years ago
|
blocking2.0: ? → beta5+
Comment 5•15 years ago
|
||
Comment on attachment 467182 [details] [diff] [review]
Only check VRAM if we have a D2D Device v2
This would be easier to read if you did:
device = gfxWindowsPlatform::GetPlatform()->GetD2DDevice()
if (device) {
} else {
}
Assignee | ||
Comment 6•15 years ago
|
||
Make it look prettier like Jeff suggested :-).
Attachment #467182 -
Attachment is obsolete: true
Attachment #467192 -
Flags: review?(joe)
Updated•15 years ago
|
Attachment #467192 -
Flags: review?(joe) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 8•15 years ago
|
||
Mozilla/5.0 (Windows NT 5.1; rv:2.0b5pre) Gecko/20100819 Minefield/4.0b5pre
verified in latest nightly : it doesn't crash anymore, and shows 0 for gfx/d2d/surfacevram
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•