Bug 588568. Only check VRAM if we have a D2D device. r=joe,a=blocking