gfx/thebes/gfxWindowsPlatform.cpp
@@ -128,9 +128,13 @@ public:
     }
 
     NS_IMETHOD GetMemoryUsed(PRInt64 *memoryUsed) {
-	*memoryUsed = cairo_d2d_get_surface_vram_usage(
-	    gfxWindowsPlatform::GetPlatform()->GetD2DDevice()
-	    );
+        cairo_device_t *device =
+            gfxWindowsPlatform::GetPlatform()->GetD2DDevice();
+        if (device) {
+            *memoryUsed = cairo_d2d_get_surface_vram_usage(device);
+        } else {
+            *memoryUsed = 0;
+        }
         return NS_OK;
     }
 };
